# Robotica_APS3

./: README.md
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: custom_interfaces
install/custom_interfaces/share/custom_interfaces/: package.sh
install/custom_interfaces/share/custom_interfaces/action/: RotateAngle.idl  RotateAngle.json
install/custom_interfaces/share/custom_interfaces/cmake/: custom_interfaces__rosidl_typesupport_cExport.cmake  custom_interfaces__rosidl_typesupport_cppExport.cmake  export_custom_interfaces__rosidl_generator_cExport.cmake  export_custom_interfaces__rosidl_generator_cppExport.cmake  export_custom_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
install/patrol_bot/lib/patrol_bot/: patrol_node  rotate_node
install/patrol_bot/share/patrol_bot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rm_description/share/ament_index/resource_index/parent_prefix_path/: rm_description
install/rm_description/share/rm_description/: local_setup.sh  package.sh
install/rm_description/share/rm_description/cmake/: rm_descriptionConfig.cmake
install/rm_localization/share/rm_localization/: package.sh
install/rm_localization/share/rm_localization/launch/: amcl.launch.py  slam.launch.py
log/: latest_build
src/rm_localization/: package.xml  setup.py
src/rm_localization/config/: amcl.yaml  slam_config.yaml
src/rm_localization/launch/: slam.launch.py
src/rm_localization/maps/: house_map.pgm  house_map.yaml
(+7 files in other folders)
